Fixed header z-index. Compressed rubik scene.gltf (from 100MB to 6MB). Removed EarthCanvas from contact section.

--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,38 @@
   -webkit-text-fill-color: transparent;
 }
 
+.react-text-gradient {
+  background: #61dafb; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #61dafb,
+    #00b7ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #61dafb,
+    #00b7ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.php-text-gradient {
+  background: #777BB3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #777BB3,
+    #4F5B93
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #777BB3,
+    #4F5B93
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 /* canvas- styles */
 .canvas-loader {
   font-size: 10px;
